# clipboard_manager

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  clipboard_manager.desktop.in  cmake_uninstall.cmake.in  setup_keybinding.sh.in
src/: constants.rs  get_clipboard_entries.rs  keybindings.rs  keyboard_handler.rs  lib.rs  main.rs
src/clipboard_entries/: clipboard_entry.rs  clipboard_file_entry.rs  clipboard_image_entry.rs  clipboard_text_entry.rs  mod.rs
src/keyboard/: cursor_movement.rs  detail_views.rs  entry_actions.rs  entry_loading.rs  help.rs  mod.rs  search.rs
src/ui/: app_state.rs  detail_view.rs  error_label.rs  list_view.rs  mod.rs
